// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter renders correctly end=0 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  visibility: hidden;
}

.emotion-2 {
  position: absolute;
  top: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      0
    </div>
    <div
      class="emotion-2"
    >
      <span>
        0
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=100 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  visibility: hidden;
}

.emotion-2 {
  position: absolute;
  top: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      100
    </div>
    <div
      class="emotion-2"
    >
      <span>
        0
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=10000 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  visibility: hidden;
}

.emotion-2 {
  position: absolute;
  top: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      10000
    </div>
    <div
      class="emotion-2"
    >
      <span>
        0
      </span>
    </div>
  </div>
</DocumentFragment>
`;
